# qr.248.no

./: .env.example  Cargo.toml  Containerfile  README.md  watch.sh
.github/workflows/: deploy.yml  push-container.yml
src/: deserializers.rs  main.rs
templates/: index.html
